deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: crud-api
  template:
    metadata:
      labels:
        app: crud-api
    spec:
      containers:
        - name: crud-api-container
          image: terraformrg.azurecr.io/my-api-image:v3
          ports:
            - containerPort: 5000
