service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-api-service8
spec:
  selector:
    app: crud-api-8
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
