ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-api-ingress7
spec:
  rules:
  - http:
      paths:
      - path: /books
        pathType: Prefix
        backend:
          service:
            name: crud-api-service7
            port:
              number: 5000
